Finished backup feature

--- a/Resources/Private/Templates/ViewHelpers/Widget/Mainnavigation/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Mainnavigation/Index.html
@@ -83,4 +83,8 @@
 	<li>
 		<f:link.action package="cgross.drinkaccounting" action="index" controller="Purchase"><f:translate locale="{langDetector.language}" id="purchase.title">Purchases (nt)</f:translate></f:link.action>
 	</li>
+
+	<li class="backup-link">
+		<f:link.action action="index" controller="Backup"><i class="icon-hdd icon-white"></i>&nbsp;<f:translate locale="{langDetector.language}" id="mainnav.backup">Backup (nt)</f:translate></f:link.action>
+	</li>
 </ul>
