Minor changes after resolution of http://forge.typo3.org/issues/35790 and http://forge.typo3.org/issues/44235

--- a/Resources/Private/Templates/Purchase/New.html
+++ b/Resources/Private/Templates/Purchase/New.html
@@ -7,7 +7,7 @@
 	<f:translate locale="{langDetector.language}" id="purchase.newPurchase">New Purchase (nt)</f:translate>
 </f:section>
 <f:section name="HeaderRight">
-	
+
 </f:section>
 
 <f:section name="Content">
@@ -59,7 +59,7 @@
 					<tr>
 						<th><f:translate locale="{langDetector.language}" id="statement.title.singular">Statement (nt)</f:translate></th>
 						<td>
-						<f:form.select property="statement" name="statement" options="{statements}" optionLabelField="title" prependOption="- none -"/>
+						<f:form.select property="statement" name="statement" options="{statements}" optionLabelField="title" prependOptionLabel="- none -"/>
 						</td>
 					</tr>
 
