--- a/Resources/Private/Templates/Statement/Stocks.html
+++ b/Resources/Private/Templates/Statement/Stocks.html
@@ -34,7 +34,7 @@
 		<div class="row">
 			<div class="span5">
 				<h3><f:translate locale="{langDetector.language}" id="statement.initialStockSelect">Select statement with initial stock (nt)</f:translate></h3>
-				<f:form.select property="initialStockStatement" id="initialStockStatement" options="{statements}" optionLabelField="title" prependOption=" - none - "/>
+				<f:form.select property="initialStockStatement" id="initialStockStatement" options="{statements}" optionLabelField="title" prependOptionLabel=" - none - "/>
 			</div>
 			<div class="span5 offset1"><p>
 				<f:translate locale="{langDetector.language}" id="statement.stocksDescription">Select statement with initial stock and enter stock of current statement. (nt)</f:translate>
