--- a/Resources/Private/Templates/ViewHelpers/Widget/Mainnavigation/Index.html
+++ b/Resources/Private/Templates/ViewHelpers/Widget/Mainnavigation/Index.html
@@ -9,13 +9,13 @@
 				<li><f:link.action
 						arguments="{statement: statement}"
 						package="cgross.drinkaccounting"
-						action="{statement.stepController}"
+						useParentRequest="1" useParentRequest="1" action="{statement.stepController}"
 						controller="Statement">{statement.title}</f:link.action></li>
 			</f:for>
 			<li class="divider"></li>
 			<li class="nav-header"><f:translate locale="{langDetector.language}" id="mainnav.actions">Actions (nt)</f:translate></li>
-			<li><f:link.action action="billed" controller="Statement"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="mainnav.statement.listBilled">List billed (nt)</f:translate></f:link.action></li>
-			<li><f:link.action action="new" controller="Statement"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="billed" controller="Statement"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="mainnav.statement.listBilled">List billed (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="new" controller="Statement"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
 		</ul>
 	</li>
 	<li class="divider-vertical"></li>
@@ -28,13 +28,13 @@
 				<li><f:link.action
 						arguments="{account: account}"
 						package="cgross.drinkaccounting"
-						action="show"
+						useParentRequest="1" action="show"
 						controller="Account">{account.name}</f:link.action></li>
 			</f:for>
 			<li class="divider"></li>
 			<li class="nav-header"><f:translate locale="{langDetector.language}" id="mainnav.actions">Actions (nt)</f:translate></li>
-			<li><f:link.action action="index" controller="Account"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
-			<li><f:link.action action="new" controller="Account"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="index" controller="Account"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="new" controller="Account"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
 		</ul>
 	</li>
 	<li class="dropdown">
@@ -48,7 +48,7 @@
 						<li><f:link.action
 								arguments="{user: user}"
 								package="cgross.drinkaccounting"
-								action="show"
+								useParentRequest="1" action="show"
 								controller="User"><i class="icon-user"></i> {user.displayName}</f:link.action>
 						</li>
 					</f:for>
@@ -56,8 +56,8 @@
 			</li>
 			<li class="divider"></li>
 			<li class="nav-header"><f:translate locale="{langDetector.language}" id="mainnav.actions">Actions (nt)</f:translate></li>
-			<li><f:link.action action="index" controller="User"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
-			<li><f:link.action action="new" controller="User"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="index" controller="User"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="new" controller="User"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
 		</ul>
 
 	</li>
@@ -70,21 +70,21 @@
 				<li><f:link.action
 						arguments="{product: product}"
 						package="cgross.drinkaccounting"
-						action="edit"
+						useParentRequest="1" action="edit"
 						controller="Product">{product.name}</f:link.action></li>
 			</f:for>
 			<li class="divider"></li>
 			<li class="nav-header"><f:translate locale="{langDetector.language}" id="mainnav.actions">Actions (nt)</f:translate></li>
-			<li><f:link.action action="index" controller="Product"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
-			<li><f:link.action action="new" controller="Product"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="index" controller="Product"><i class="icon-list"></i> <f:translate locale="{langDetector.language}" id="control.list">List (nt)</f:translate></f:link.action></li>
+			<li><f:link.action useParentRequest="1" action="new" controller="Product"><i class="icon-plus"></i> <f:translate locale="{langDetector.language}" id="control.new">New (nt)</f:translate></f:link.action></li>
 		</ul>
 
 	</li>
 	<li>
-		<f:link.action package="cgross.drinkaccounting" action="index" controller="Purchase"><f:translate locale="{langDetector.language}" id="purchase.title">Purchases (nt)</f:translate></f:link.action>
+		<f:link.action package="cgross.drinkaccounting" useParentRequest="1" action="index" controller="Purchase"><f:translate locale="{langDetector.language}" id="purchase.title">Purchases (nt)</f:translate></f:link.action>
 	</li>
 
 	<li class="backup-link">
-		<f:link.action action="index" controller="Backup"><i class="icon-hdd icon-white"></i>&nbsp;<f:translate locale="{langDetector.language}" id="mainnav.backup">Backup (nt)</f:translate></f:link.action>
+		<f:link.action useParentRequest="1" action="index" controller="Backup"><i class="icon-hdd icon-white"></i>&nbsp;<f:translate locale="{langDetector.language}" id="mainnav.backup">Backup (nt)</f:translate></f:link.action>
 	</li>
 </ul>
